# jump-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  jump.sh
.github/workflows/: ci.yml
src/: app.rs  cli.rs  config.rs  filter.rs  main.rs  search.rs  store.rs  utils.rs
src/explorer/: actions.rs  draw.rs  layout.rs  mod.rs  state.rs
src/ui/: chrome.rs  components.rs  dashboard.rs  draw.rs  helpers.rs  icons.rs  layout.rs  mod.rs  tui.rs
