[package]
name = "jump"
version = "0.4.0"
edition = "2021"
description = "Zero-config directory jumper + file explorer"
license = "MIT"

[[bin]]
name = "jump"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
open = "5"
image = "0.25"